--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jose": "^5.9.6",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.471.0",
+    "mongoose": "^8.9.4",
     "next": "14.2.23",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
