--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.5.0",
     "@tanstack/react-table": "^8.20.6",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -30,6 +32,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.1",
+    "stripe": "^17.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
